# Change Log of ARCADE

## Unreleased
### NEW
*   Flash animation, StimServer 1.2.3.0

### FIXED
*   Wrong file name of trackdigitalinput function

### CHANGED
*   Restructured StimServer folder
*   terminalAction property of Animation is now a string

### FIXED
*   Bugs in Rectangle destructor
*   Animations are unassigned in Stimulus destructor

## [2.0.0a3] - 2017-07-14
### CHANGED
*   Eventmarkers are now controlled via NidaqServer.exe (port 0-1, strobe on
    port2/line7 (PCI-6221) or port2/line0 (PCI-6503)
  
### FIXED
*   Bugs in EyelinkEyeServer


## [2.0.0a2] - 2017-07-10
### NEW
*   Helper function for tracking digital input
*   Buttons and hotkeys in ControlScreen for setting an event to skip a trial.
*   NidaqServer.exe 1.0.4.0 sets a RewardDone event when the reward sequence
    is over
*   Example task for tracking a lever

## [2.0.0a1]
### NEW
*   Buttons and hotkeys for reward in ControlScreen
*   Support for arbitrary digital input devices, e.g. levers.
*   NidaqServer for National Instruments Cards PCI(e)-6221 and PCI-6503
*   EyeServer and DaqServer can be selected from the configuration GUI
*   A trial can be terminated after a maximal number of iterations of a
    specific state (maxRepetitions property of State)

### CHANGED
*   Definition of State: states now wait for kernel32 events and select the
    next state according to which event was triggered or a timeout occurred.
    The syntax for State definition has completely changed (see new
    documentation).
*   Reward is delivered via DaqServer
*   Eye position is monitored in EyeServer processes and status signaled via
    events

### REMOVED
*   onRun functionality of States. If necessary this will be re-added later.

##  [1.0.0b3] - 2017-06-21
### NEW
*   Added Gaussian stimulus

### CHANGED
*   Enhanced condition/block selection functions: block selection is evaluated 
    first and its result can be used in the condition selection function as 2nd 
    argument.